@@ -207,12 +207,6 @@
     (ça aurait un sens au moins quand on inline dans une production unité?)
     (ou plus généralement quand on inline en dernière position?)
 
-* BUG (message de Valentin Gatien-Baron du 09/01/2010): l'avertissement comme
-  quoi une directive %prec ne sert à rien est faux dans le cas où cette
-  directive a été dupliquée (par expansion des non-terminaux paramétrés ou par
-  %inline quand la production hôte porte un %prec) et une copie, mais pas
-  toutes, ne sert à rien.
-
 * Reconnaître les directives # n "foo" dans le fichier .mly et en tenir
   compte dans les locations.
 
