@@ -1,3 +1,9 @@
+2015/10/06:
+Fixed a bug whereby Menhir would warn about a useless %prec declaration,
+even though it was useful. This would happen when the declaration was
+duplicated (by inlining or by macro-expansion) and some but not all of
+the copies were useful.
+
 2015/09/29:
 Added [has_default_reduction] to the incremental API.
 
